--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -623,10 +623,22 @@
 </details> 
 </li>
 <li class="code-num">
- <details> <summary>Code 032 –&nbsp;Registered pension plan contributions (past service)</summary> 
-  <p id="cd032">Report the contributions a former employee made to buy past service. The plan administrator usually&nbsp;fills out&nbsp;the T4A&nbsp;slip when an employer-employee relationship no longer exists. Include any instalment interest paid for past service contributions. Instalment interest is the portion of contributions that represents the amount charged to buy past service over time. In the "Other information" area, enter code&nbsp;<strong>032</strong> and the amount of the payment.</p> 
-  <p>Past service contributions for 1989 or earlier years while a contributor, include the amount twice, using both code&nbsp;<strong>032</strong> and code&nbsp;<strong>126</strong>.</p> 
-  <p>Past service contributions for 1989 or earlier years while not a contributor, include the amount twice, using both code <strong>032</strong> and code <strong>162</strong>.</p> 
+ <details> <summary>Code 032 –&nbsp;Registered pension plan contributions (past service) <span class="label label-warning">Jeremiah</span></summary> 
+  <p id="cd032">Report the contributions a former employee made to buy past service using code 032.</p> 
+ <h4>Specific situations </h4>
+<dl class="dl-horizontal">
+
+<dt>1989 or earlier years while a contributor</dt>
+<dd>Report the amount using code 032 <strong>and</strong> <a href="#cd126">code 126</a></dd>
+
+<dt>1989 or earlier years while not a contributor</dt>
+<dd>Report the amount using code 032 <strong>and</strong> <a href="#cd162">code 162</a></dd>
+</dl>
+
+ <p>The plan administrator usually&nbsp;fills out&nbsp;the T4A&nbsp;slip when an employer-employee relationship no longer exists. You must include any instalment interest paid for past service contributions. Instalment interest is the portion of contributions that represents the amount charged to buy past service over time.</p>
+
+<p>Learn more on the tax treatement of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>
+  
  </details> 
 </li>
 <li class="code-num">
@@ -806,8 +818,10 @@
 </li>
 <li class="code-num">
  <details>  <summary>Code 126 – Pre-1990 past service contributions while a contributor</summary> 
-  <p id="cd126">Learn more: Code 032 – Registered pension plan contributions (past service)</p> 
- </details> 
+  <p id="cd126">Report the amount for past service contributions for 1989 or earlier years while a contributor using code 126  <strong>and</strong> <a href="#cd032">code 032</a></p> 
+
+
+</details> 
 </li>
 <li class="code-num">
  <details>  <summary>Code 127 – Veterans' benefits <span class="label label-warning">Jeremiah</span></summary> 
@@ -931,8 +945,9 @@
 </details> 
  </li>
 <li class="code-num">
-<details>  <summary>Code 162 – Pre-1990 Past services contributions while not a contributor</summary> 
-  <p  id="cd162">Learn more: Code 032 – Registered pension plan contributions (past service).</p> 
+<details>  <summary>Code 162 – Pre-1990 Past services contributions while not a contributor <span class="label label-warning">Jeremiah</span></summary> 
+<p id="cd162">Report the amount for past service contributions for 1989 or earlier years while not a contributor using code 162  <strong>and</strong> <a href="#cd032">code 032</a></p> 
+
  </details> 
 </li>
 
