--- a/fhsa/deductions.html
+++ b/fhsa/deductions.html
@@ -67,7 +67,7 @@
 
             <h2 class="h3">On this page</h2>
             <ul>
-               <li><a href="#h-1">How much can you deducts</a></li>
+               <li><a href="#h-1">How much can you deduct</a></li>
                <li><a href="#h-2">Which contributions can you deduct in a year</a></li>
                <li><a href="#h-3">Non-deductible transfers from an RRSP to an FHSA</a></li>
 		                   <li><a href="#h-4">Unused FHSA contributions</a></li>
