--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -643,7 +643,15 @@
 </li>
 <li class="code-num">
  <details> <summary>Code 034 – Pension adjustment</summary> 
-  <p  id="cd034">If you are the plan administrator for a multi-employer plan (MEP), you should report, in dollars only, the amount of <abbr title="pension adjustment">PA</abbr> an employee has under an <abbr title="registered pension plan">RPP</abbr> during a period of leave or reduced services. For periods of leave or reduced services not under a MEP, report the PA on a T4 slip.</p> 
+  <p  id="cd034">Report the amount of a pension adjustment (<abbr title="pension adjustment">PA</abbr>) if you are the plan administrator for a multi-employer plan (<abbr title="multi-employer plan">MEP</abbr>) you made to an employee under a registered pension plan (<abbr title="registered pension plan">RPP</abbr>) during a period of leave or reduced services.</p>
+<p><strong>Do not</strong> report the amount of <abbr title="pension adjustment">PA</abbr>for periods of leave or reduced services <strong>not under a MEP</strong> using code 034, use the <a href="/cra-arc/payroll/file/t4slip.html">T4 slip</a>.</p> 
+
+ <h4>When to issue</h4>
+<dl class="dl-horizontal">
+<dt>Administrator or trustee of a multi-employer plan (MEP)</dt>
+<dd><div data-ajax-replace="#ajax-ex4"></div></dd>
+</dl>
+
  </details> 
  </li>
 <li class="code-num">
