--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -651,6 +651,7 @@
 <dt>Administrator or trustee of a multi-employer plan (MEP)</dt>
 <dd><div data-ajax-replace="#ajax-ex4"></div></dd>
 </dl>
+<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>         
 
  </details> 
  </li>
