--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -409,7 +409,7 @@
 
 
 </dl>
-<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>         
+<p>Learn more on the tax treatement of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>         
 
                 </details>
  </li>
@@ -481,7 +481,7 @@
 </dd>
 </dl>
 
-<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/lumpsum.html">Lump-sum payments</a></p>     
+<p>Learn more on the tax treatement of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/lumpsum.html">Lump-sum payments</a></p>     
 
   </details>
           </li>
@@ -642,16 +642,16 @@
  </details> 
 </li>
 <li class="code-num">
- <details> <summary>Code 034 – Pension adjustment</summary> 
+ <details> <summary>Code 034 – Pension adjustment <span class="label label-warning">Jeremiah</span></summary> 
   <p  id="cd034">Report the amount of a pension adjustment (<abbr title="pension adjustment">PA</abbr>) if you are the plan administrator for a multi-employer plan (<abbr title="multi-employer plan">MEP</abbr>) you made to an employee under a registered pension plan (<abbr title="registered pension plan">RPP</abbr>) during a period of leave or reduced services.</p>
-<p><strong>Do not</strong> report the amount of <abbr title="pension adjustment">PA</abbr>for periods of leave or reduced services <strong>not under a MEP</strong> using code 034, use the <a href="/cra-arc/payroll/file/t4slip.html">T4 slip</a>.</p> 
+<p><strong>Do not</strong> report the amount of a <abbr title="pension adjustment">PA</abbr> for periods of leave or reduced services <strong>not under a MEP</strong> using code 034, use the <a href="/cra-arc/payroll/file/t4slip.html">T4 slip</a>.</p> 
 
  <h4>When to issue</h4>
 <dl class="dl-horizontal">
 <dt>Administrator or trustee of a multi-employer plan (MEP)</dt>
 <dd><div data-ajax-replace="#ajax-ex4"></div></dd>
 </dl>
-<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>         
+<p>Learn more on the tax treatement of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>         
 
  </details> 
  </li>
