--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -666,6 +666,9 @@
   <p id="cd037">Report the total <abbr title="Advanced life deferred annuity">ALDA</abbr> amounts <strong>transferred from a money purchase </strong> of <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Pool registered pension plan">PRPP</abbr> or <abbr title="Deferred profit sharing plan">DPSP</abbr>.</p> 
 <p>If an amount exceeding the individual’s lifetime limit has been purchased, the excess amount that is transferred back to a qualified registered plan must be reported as a <strong>negative amount</strong> in this box.</p> 
 <p><strong>Do not</strong> report annuity payments from an <abbr title="Advanced life deferred annuity">ALDA</abbr> using code 037, use <a href="#bx024">box 024</a>.</p>
+
+<p>Learn more on the tax treatment of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/annuity.html">Annuity payments </a> </p>
+
   </details> 
   </li>
 
@@ -741,6 +744,8 @@
  <details >  <summary>Code 109 – Periodic payments from an unregistered plan <span class="label label-warning">Jeremiah</span></summary> 
 <p  id="cd109">Report the periodic payments from pension benefits you paid from a pension fund or plan that is <strong>not</strong> registered using code 109. </p> 
 <p><strong>Do not</strong> report this amount using box 016.</p>
+<p>Learn more on the tax treatement of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>         
+
  </details> 
  </li>
 <li class="code-num">
@@ -822,6 +827,7 @@
  
 <p><strong>Do not</strong> report this amount using box 016.</p> 
 <p><strong>Do not</strong> report <strong>disability benefits paid as a life annuity</strong> out of a superannuation or <abbr title="Registered pension plan">RPP</abbr> using code 125, use <a href="#bx016">box 016</a></p>
+<p>Learn more on the tax treatement of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>         
 
 </details> 
 </li>
@@ -872,11 +878,14 @@
 <details >  <summary>Code 133 – Variable pension benefits <span class="label label-warning">Jeremiah</span></summary> 
   <p id="cd133">Report variable payment life annuity (<abbr title="Variable payment life annuity">VPLA</abbr>) paid out of a money purchase from a <abbr title="registered pension plan">RPP</abbr> and a <abbr title="pool registered pension plan">PRPP</abbr>.</p>
 <p><strong>Do not</strong> report this amount using box 024.</p>
+
+<p>Learn more on the tax treatement of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>         
+
 </details> 
  </li>
 
 <li class="code-num">
-<details>  <summary>Code 134 – Tax-free savings account (TFSA) taxable amount <span class="label label-warning">Jeremiah - Not mentioned on the webpage?</span></summary> 
+<details>  <summary>Code 134 – Tax-free savings account (TFSA) taxable amount <span class="label label-warning">Jeremiah</span></summary> 
   <p  id="cd134">Report the amount of the taxable benefit you paid during the exempt period to a beneficiary who is a resident of Canada.</p>
  <h4>When to issue</h4>
 <dl class="dl-horizontal">
@@ -884,7 +893,7 @@
 <dd><div data-ajax-replace="#ajax-ex2"></div></dd>
 </dl>
 
-<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/benefits-allowances/financial/tax-free-savings-account-tfsa.html">Tax-free savings account (TFSA)</a>.</p> 
+<p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/retirement.html#tfsa">Savings and pension plans</a>.</p> 
  </details> 
 </li>
 <li class="code-num">
