--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -644,6 +644,9 @@
 <li class="code-num">
  <details> <summary>Code 034 – Pension adjustment <span class="label label-warning">Jeremiah</span></summary> 
   <p  id="cd034">Report the amount of a pension adjustment (<abbr title="pension adjustment">PA</abbr>) if you are the plan administrator for a multi-employer plan (<abbr title="multi-employer plan">MEP</abbr>) you made to an employee under a registered pension plan (<abbr title="registered pension plan">RPP</abbr>) during a period of leave or reduced services.</p>
+
+<p>You must also enter the plan registration number using <a href="#cd036">code 36</a></p>
+
 <p><strong>Do not</strong> report the amount of a <abbr title="pension adjustment">PA</abbr> for periods of leave or reduced services <strong>not under a MEP</strong> using code 034, use the <a href="/cra-arc/payroll/file/t4slip.html">T4 slip</a>.</p> 
 
  <h4>When to issue</h4>
@@ -657,8 +660,10 @@
  </li>
 <li class="code-num">
  <details>  <summary>Code 036 – Plan registration number</summary> 
-  <p id="cd036">Enter the registration number we issued for the <abbr title="registered pension plan">RPP</abbr> or <abbr title="deferred profit-sharing plan">DPSP</abbr>, in which an employee participates, and which gave rise to the <abbr title="pension adjustment">PA</abbr> you are reporting. You have to report the plan number even if your plan requires only employer contributions. If you made contributions to more than one plan for the employee, enter only the number of the plan under which the employee has the largest <abbr title="pension adjustment">PA</abbr>.</p> 
-  <p>Enter registration numbers (not more than three) for any additional plans on lines 071, 072, and 073 of the T4A summary.</p> 
+<p id="cd036">Enter the registration number the CRA issued for the <abbr title="registered pension plan">RPP</abbr> or <abbr title="deferred profit-sharing plan">DPSP</abbr> if you reported an amount for a pension adjustment (<abbr title="pension adjustment">PA</abbr>) using code <a href="#cd034">code 34</a>.</p>. 
+
+<p>Enter the plan number even if your plan requires only employer contributions. If you made contributions to more than one plan for the employee, enter only the number of the plan under which the employee has the largest <abbr title="pension adjustment">PA</abbr>.</p> 
+<p>Enter registration numbers (not more than three) for any additional plans on lines 071, 072, and 073 of the T4A summary.</p> 
  </details>
 </li>
 <li class="code-num"> 
