--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -659,11 +659,8 @@
  </details> 
  </li>
 <li class="code-num">
- <details>  <summary>Code 036 – Plan registration number</summary> 
-<p id="cd036">Enter the registration number the CRA issued for the <abbr title="registered pension plan">RPP</abbr> or <abbr title="deferred profit-sharing plan">DPSP</abbr> if you reported an amount for a pension adjustment (<abbr title="pension adjustment">PA</abbr>) using code <a href="#cd034">code 34</a>.</p>. 
-
-<p>Enter the plan number even if your plan requires only employer contributions. If you made contributions to more than one plan for the employee, enter only the number of the plan under which the employee has the largest <abbr title="pension adjustment">PA</abbr>.</p> 
-<p>Enter registration numbers (not more than three) for any additional plans on lines 071, 072, and 073 of the T4A summary.</p> 
+ <details>  <summary>Code 036 – Plan registration number <span class="label label-warning">Jeremiah</span></summary> 
+<p id="cd036">Enter the 7-digit registration number that the CRA gave you for your <abbr title="registered pension plan">RPP</abbr> or <abbr title="deferred profit-sharing plan">DPSP</abbr> if you reported an amount for a pension adjustment (<abbr title="pension adjustment">PA</abbr>) using code <a href="#cd034">code 34</a>.</p> 
  </details>
 </li>
 <li class="code-num"> 
