--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -661,6 +661,9 @@
 <li class="code-num">
  <details>  <summary>Code 036 – Plan registration number <span class="label label-warning">Jeremiah</span></summary> 
 <p id="cd036">Enter the 7-digit registration number that the CRA gave you for your <abbr title="registered pension plan">RPP</abbr> or <abbr title="deferred profit-sharing plan">DPSP</abbr> if you reported an amount for a pension adjustment (<abbr title="pension adjustment">PA</abbr>) using code <a href="#cd034">code 34</a>.</p> 
+
+<p>If you made contributions to <strong>more than one</strong> plan for the employee, enter only the number of the plan under which the employee has the largest <abbr title="pension adjustment">PA</abbr>.</p> 
+
  </details>
 </li>
 <li class="code-num"> 
