--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -645,7 +645,7 @@
  <details> <summary>Code 034 – Pension adjustment <span class="label label-warning">Jeremiah</span></summary> 
   <p  id="cd034">Report the amount of a pension adjustment (<abbr title="pension adjustment">PA</abbr>) if you are the plan administrator for a multi-employer plan (<abbr title="multi-employer plan">MEP</abbr>) you made to an employee under a registered pension plan (<abbr title="registered pension plan">RPP</abbr>) during a period of leave or reduced services.</p>
 
-<p>You must also enter the plan registration number using <a href="#cd036">code 36</a></p>
+<p>You must also enter the plan registration number using <a href="#cd036">code 36</a>.</p>
 
 <p><strong>Do not</strong> report the amount of a <abbr title="pension adjustment">PA</abbr> for periods of leave or reduced services <strong>not under a MEP</strong> using code 034, use the <a href="/cra-arc/payroll/file/t4slip.html">T4 slip</a>.</p> 
 
