--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -724,9 +724,15 @@
 <li class="code-num">
  <details>  <summary>Code 105 – Scholarships, fellowships, bursaries, and artists' project grants  <span class="label label-warning">Jeremiah</span></summary> 
   <p id="cd105">Report the full amount of the scholarships, fellowships, bursaries, and artists' project grants you paid to the recipient.</p> 
-<h4>Postdoctoral fellowship income</h4>
-<p>Report postdoctoral fellowship income you paid using code 105 <strong>and</strong> <a href="#cd210">code 210</a>. </p>
-<p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/education.html">Educational assistance</a></p> 
+
+ <h4>Specific situations </h4>
+<dl class="dl-horizontal">
+
+<dt>Postdoctoral fellowship income</dt>
+<dd><p>Report postdoctoral fellowship income you paid using code 105 <strong>and</strong> <a href="#cd210">code 210</a>. </p>
+<p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/education.html">Educational assistance</a></p> </dd>
+</dl>
+
  </details> 
 </li>
 <li class="code-num">
@@ -831,9 +837,14 @@
  <p  id="cd125">Report any disability benefits paid out of a superannuation or pension plan.</p> 
  
 <p><strong>Do not</strong> report this amount using box 016.</p> 
-<p><strong>Do not</strong> report <strong>disability benefits paid as a life annuity</strong> out of a superannuation or <abbr title="Registered pension plan">RPP</abbr> using code 125, use <a href="#bx016">box 016</a></p>
-<p>Learn more on the tax treatement of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>         
+<h4>Specific situation </h4>
+<dl class="dl-horizontal">
 
+<dt>Disability benefits paid as a life annuity</dt>
+<dd><p><strong>Do not</strong> report <strong>disability benefits paid as a life annuity</strong> out of a superannuation or <abbr title="Registered pension plan">RPP</abbr> using code 125, use <a href="#bx016">box 016</a></p>
+<p>Learn more on the tax treatement of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>         
+ </dd>
+</dl>
 </details> 
 </li>
 <li class="code-num">
@@ -978,7 +989,13 @@
  <details>  <summary>Code 180 – Lump-sum payments from a deferred profit-sharing plan (DPSP) that you cannot transfer <span class="label label-warning">Jeremiah</span></summary> 
  <p id="cd180">Report single payments you made that you <strong>cannot transfer</strong> from a <abbr title="Deferred profit sharing plan">DPSP</abbr> using code 180 <strong>and</strong> <a href="#bx018">box 018</a></p>
 <p>You also have to report the amount of the payments if you allocated an amount in a <strong>previous year</strong> and you made the payment in the current year.</p>
-<p><strong>Do not</strong> report the amount of the payments you allocated or reallocated <strong>dring the year</strong> under a <abbr title="Deferred profit sharing plan">DPSP</abbr> or a revoked plan using code 180, use <a href="#bx018">box 018</a>. </p>
+<h4>Specific situation </h4>
+<dl class="dl-horizontal">
+
+<dt>Current year payments</dt>
+<dd><p><strong>Do not</strong> report the amount of the payments you allocated or reallocated <strong>during the year</strong> under a <abbr title="Deferred profit sharing plan">DPSP</abbr> or a revoked plan using code 180, use <a href="#bx018">box 018</a>. </p>
+</dd>
+</dl>
 </details> 
 </li>
 
