--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -670,7 +670,12 @@
  <details >  <summary>Code 037 – Advanced life deferred annuity purchase <span class="label label-warning">Jeremiah</span></summary> 
   <p id="cd037">Report the total <abbr title="Advanced life deferred annuity">ALDA</abbr> amounts <strong>transferred from a money purchase </strong> of <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Pool registered pension plan">PRPP</abbr> or <abbr title="Deferred profit sharing plan">DPSP</abbr>.</p> 
 <p>If an amount exceeding the individual’s lifetime limit has been purchased, the excess amount that is transferred back to a qualified registered plan must be reported as a <strong>negative amount</strong> in this box.</p> 
-<p><strong>Do not</strong> report annuity payments from an <abbr title="Advanced life deferred annuity">ALDA</abbr> using code 037, use <a href="#bx024">box 024</a>.</p>
+
+ <h4>Specific situation </h4>
+<dl class="dl-horizontal">
+<dt>Annuity payments</dt>
+<dd><p><strong>Do not</strong> report annuity payments from an <abbr title="Advanced life deferred annuity">ALDA</abbr> using code 037, use <a href="#bx024">box 024</a>.</p></dd>
+</dl>
 
 <p>Learn more on the tax treatment of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/annuity.html">Annuity payments </a> </p>
 
@@ -678,11 +683,14 @@
   </li>
 
 <li class="code-num">
- <details>  <summary>Code 040 – RESP accumulated income payments</summary> 
-  <p id="cd040">If you are the promoter of a RESP and you paid <abbr title="registered education savings plan">RESP</abbr> accumulated income payments to a subscriber of the plan, report this amount in the "Other information" area using code&nbsp;<strong>040</strong>.</p> 
-  <p>If the subscriber and the subscriber's spouse or common-law partner are deceased and you pay the <abbr title="registered education savings plan">RESP</abbr> accumulated income payments to someone else, in the "Other information" area enter code <strong>122</strong> and the amount of the payment.</p> 
+ <details>  <summary>Code 040 – RESP accumulated income payments <span class="label label-warning">Jeremiah</span></summary> 
+  <p id="cd040">Report accumulated income payments you made as the promoter of a registered education savings plan (<abbr title="Registered education savings plan">RESP</abbr>) to a subscriber of the plan.</p> 
+   <h4>Specific situation </h4>
+<dl class="dl-horizontal">
+<dt>Payments made to someone else</dt>
+<dd> Report the accumulated income payments you made to someone else because the subscriber, the subscriber's spouse or common-law partner  deceased using code 040 <strong>and</strong> <a href="#cd122">code 122</a>.</dd>
+</dl> 
   
-    <p>The regular tax on lump-sum payments <strong>and</strong> an additional tax of 20% (12% for Quebec) may apply to accumulated income payments.</p> 
     <h4>When to issue</h4>
 <dl class="dl-horizontal">
 <dt>RESP payments</dt>
@@ -811,8 +819,9 @@
  </details> 
  </li>
 <li class="code-num">
-<details>  <summary>Code 122 – RESP accumulated income payments paid to other</summary> 
-  <p id="cd122">Learn more: Code 040&nbsp;–&nbsp;RESP accumulated income payments</p> 
+<details>  <summary>Code 122 – RESP accumulated income payments paid to other <span class="label label-warning">Jeremiah</span></summary> 
+<p id="cd122">Report the accumulated income payments you made to someone else because the subscriber, the subscriber's spouse or common-law partner  deceased using code 122 <strong>and</strong> <a href="#cd040">code 040</a>.</p> 
+
   <h4>When to issue</h4>
 <dl class="dl-horizontal">
 <dt>RESP payments</dt>
