--- a/subway/uht/filereturn.html
+++ b/subway/uht/filereturn.html
@@ -783,7 +783,7 @@ margin-left: 38px;
                 <li><a href="whomust.html">Who must file a return and pay the tax</span></a></li>
                 <li><a href="calculate.html">Calculate what you owe</span></a></li>
 	<li><a href="downloadcomplete.html">Download and complete the return</span></a></li>
-                <li class="active"><a aria-current="page"><a href="filereturn.html">File the return</span></a></li>
+                <li class="active"><a aria-current="page"><a href="filereturn.html">Send the return</span></a></li>
                 <li><a href="paytax.html">Pay the tax</span></a></li>
                 <li><a href="contact.html">Contact us</span></a></li>
 			</ul>
@@ -792,14 +792,14 @@ margin-left: 38px;
             </nav>
          </section>
          <section class="gc-nav-section experimental provisional">
-            <h1 property="name" id="wb-cont">Filing the return</h1>
-			<h2 id="h_4">File  the return</h2>
-     You may either use electronic filing, or you may file your return by mail.</p>
+            <h1 property="name" id="wb-cont">Send the return</h1>
+			
+     You may either use electronic filing, or you may send your return by mail.</p>
       <dl class="dl-horizontal">
-        <dt>File electronically</dt>
+        <dt>Electronically</dt>
         <dd><p><a href="https://apps.cra-arc.gc.ca/ebci/sres/ext/pub/ntrUhtFlng?request_locale=en_CA">Submit your Underused Housing Tax return electronically</a></p> 
 			<p>When you submit, you will be presented with a list of requirements to complete.</dd>
-        <dt>File by mail</dt>
+        <dt>By mail</dt>
         <dd>
           <p>Where you send your return depends on you (as an individual), or your corporation's location.</p>
        
