--- a/subway/uht/calculate.html
+++ b/subway/uht/calculate.html
@@ -782,7 +782,7 @@ margin-left: 38px;
                 <li><a href="whomust.html">Who must file a return and pay the tax</span></a></li>
                 <li class="active"><a aria-current="page"><a href="calculate.html">Calculate what you owe</span></a></li>
 	<li><a href="downloadcomplete.html">Download and complete the return</span></a></li>
-                <li><a href="filereturn.html">File the return</span></a></li>
+                <li><a href="filereturn.html">Send the return</span></a></li>
                 <li><a href="paytax.html">Pay the tax</span></a></li>
                 <li><a href="contact.html">Contact us</span></a></li>
 			</ul>
@@ -793,7 +793,7 @@ margin-left: 38px;
          <section class="gc-nav-section experimental provisional">
             <h1 property="name" id="wb-cont">Calculate what you owe</h1>
             
-		   <h2 id="h_3">Calculate what you owe</h2>
+		   
       <p>If your ownership of a residential property <strong>does not qualify for an exemption</strong> from the Underused Housing Tax for a calendar year, you must calculate what you owe for the calendar year.</p>
    
 	<p>The tax rate of the Underused Housing Tax is 1%. To calculate what you owe, multiply the value of the residential property by the 1% tax rate. Then multiply that result by your <strong>ownership percentage</strong> of the property.</p></div>
