--- a/subway/uht/calculate.html
+++ b/subway/uht/calculate.html
@@ -795,7 +795,10 @@ margin-left: 38px;
             
 		   
       <p>If your ownership of a residential property <strong>does not qualify for an exemption</strong> from the Underused Housing Tax for a calendar year, you must calculate what you owe for the calendar year.</p>
-   
+   <div class="row mrgn-bttm-lg">
+		  <div class="col-sm-6 col-md-5">
+		<p>The tax rate of the Underused Housing Tax is 1%. To calculate what you owe, multiply the value of the residential property by the 1% tax rate. Then multiply that result by your <strong>ownership percentage</strong> of the property.</p></div>
+		  <div class="col-sm-6 col-md-7">
 	<p>The tax rate of the Underused Housing Tax is 1%. To calculate what you owe, multiply the value of the residential property by the 1% tax rate. Then multiply that result by your <strong>ownership percentage</strong> of the property.</p></div>
 		 
 		 <details>
