--- a/subway/uht/paytax.html
+++ b/subway/uht/paytax.html
@@ -783,7 +783,7 @@ margin-left: 38px;
                 <li><a href="whomust.html">Who must file a return and pay the tax</span></a></li>
                 <li><a href="calculate.html">Calculate what you owe</span></a></li>
 	<li><a href="downloadcomplete.html">Download and complete the return</span></a></li>
-                <li><a href="filereturn.html">File the return</span></a></li>
+                <li><a href="sendreturn.html">Send the return</span></a></li>
                 <li class="active"><a aria-current="page"><a href="paytax.html">Pay the tax</span></a></li>
                 <li><a href="contact.html">Contact us</span></a></li>
 			</ul>
