--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -393,8 +393,15 @@
 <p><strong>Do not</strong> report any <strong>other veterans' benefits</strong> you paid using box 016, use <a href="#cd127">code 127</a>.</p></dd>
 
 <dt>Unregistered pension plan</dt>
-<dd><p><strong>Do not</strong> report benefits from an <strong>unregistered pension plan</strong> using box 016, use <a href="#cd109">code 109</a>.</p>
-<p>You may have paid superannuation or pension benefits to a Canadian resident under an <strong>unregistered pension plan </strong>for services that the person rendered in a period throughout which the person <strong>did not reside in Canada</strong>. These payments <strong>cannot</strong> be transferred to a registered pension plan (RPP) or registered retirement savings plan (RRSP)</p>
+<dd><p>Report superannuation or pension benefits you paid to a Canadian resident under an <strong>unregistered pension plan </strong>for services that the person rendered in a period throughout which the person <strong>did not reside in Canada</strong> using box 016. These payments <strong>cannot</strong> be transferred to a registered pension plan (RPP) or registered retirement savings plan (RRSP).</p>
+
+<p><strong>Do not</strong> report:</p>
+ <ul>
+ <li><strong>Periodic payments</strong> from an <strong>unregistered pension plan</strong> using box 016, use <a href="#cd109">code 109</a>
+ </li>
+  <li><strong>Lump-sum payments</strong> from an <strong>unregistered pension plan</strong> using box 016, use <a href="#cd190">code 190</a>
+ </li>
+  </ul>
 </dd>
 
 <dt>Indian (exempt income)</dt>
