--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -399,7 +399,7 @@
  <ul>
  <li><strong>Periodic payments</strong> from an <strong>unregistered pension plan</strong> using box 016, use <a href="#cd109">code 109</a>
  </li>
-  <li><strong>Lump-sum payments</strong> from an <strong>unregistered pension plan</strong> using box 016, use <a href="#cd190">code 190</a>
+  <li><strong>Lump-sum payments</strong> from an <strong>unregistered pension plan</strong> using box 016, use <a href="#bx018">box 018</a> and <a href="#cd190">code 190</a>
  </li>
   </ul>
 </dd>
