--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -449,20 +449,20 @@
 <dt>Non-resident services</dt>
 <dd><p>Report amount paid for superannuation or pension benefits to a Canadian resident under an unregistered pension plan for services that the person rendered in a period throughout which the person did not reside in Canada using box 018.</p>
 
-<p>Report lump-sum payments you made for non-resident services transferred under paragraph 60(j) using box 018 <strong>and</strong> <a href="#cd102">code 102</a>.</p>
+<p>Report lump-sum payments you made for non-resident services transferred to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Simplified pension plan">SPP</abbr>, <abbr title="Pooled registered pension plan">PRPP</abbr> or <abbr title="Registered retirement savings plan">RRSP</abbr> and which were eligible to be deducted under paragraph 60(j) using box 018 <strong>and</strong> <a href="#cd102">code 102</a>.</p>
 
 <p><strong>Do not</strong> report the payments out of an <abbr title="Employee benefit plan">EBP</abbr> that are <strong>not</strong> payments of superannuation or pension benefits using box 018, use the <a href="/cra-arc/payroll/file/t4slip.html">T4 slip</a></p>
 </dd>
 
-<dt>Accrued to December 31, 1971</dt>
-<dd>Report lump-sum payments you made out of <abbr title="registered pension plan">RPP</abbr>s and <abbr title="Deferred profit sharing plan">DPSP</abbr>s accrued to December 31, 1971 using box 018 <strong>and</strong> <a href="#cd110">code 110</a>. </dd>
+<dt>Lump-sum payments out of <abbr title="Registered pension plan">RPP</abbr> and <abbr title="Deferred profit sharing plan">DPSP</abbr> accrued to December 31, 1971</dt>
+<dd>Report lump-sum payments you made out of a registered pension plan <abbr title="registered pension plan">RPP</abbr> and deferred profit sharing plan <abbr title="Deferred profit sharing plan">DPSP</abbr> accrued to December 31, 1971 using box 018 <strong>and</strong> <a href="#cd110">code 110</a>. </dd>
 
-<dt>Amounts not eligible for transfer</dt>
-<dd><p>Report amounts you transferred that are greater than the amounts allowed under subsections 147.3(1) to (8) or 147(19) of the Income Tax Act that are considered income in the year they are transferred using box 018.</p>
+<dt>Amounts not eligible for transfer from a <abbr title="Registered pension plan">RPP</abbr> and <abbr title="Deferred profit sharing plan">DPSP</abbr></dt>
+<dd><p>Report amounts you transferred that are greater than the amounts allowed under subsections 147.3(1) to (8) or 147(19) of the Income Tax Act that are considered income in the year they are transferred using box 018. These amounts are considered income in the year they are transferred.</p>
 <p>Report single payments you made that you <strong>cannot transfer</strong> :</p>
 <ul>
-<li>from <abbr title="Registered pension plan">RPP</abbr> using box 018 <strong>and</strong> <a href="#cd108">code 108</a></li>
-<li>from <abbr title="Deferred profit sharing plan">DPSP</abbr> using box 018 <strong>and</strong> <a href="#cd180">code 180</a></li> 
+<li>from a <abbr title="Registered pension plan">RPP</abbr> using box 018 <strong>and</strong> <a href="#cd108">code 108</a></li>
+<li>from a <abbr title="Deferred profit sharing plan">DPSP</abbr> using box 018 <strong>and</strong> <a href="#cd180">code 180</a></li> 
 <li>that is not required to be reported elsewhere using box 018 <strong>and</strong> <a href="#cd158">code 158</a></li>
 </ul>
 </dd>
