--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -480,11 +480,11 @@
 <dd>Report the pension benefits you paid from a pension fund or plan that is <strong>not</strong> registed using box 018 <strong>and</strong> <a href="#cd190">code 190</a>. </dd>
 
 <dt>Indian (exempt income)</dt>
-<dd><strong>Do not</strong> report tax-exempt lump-sum payments you paid to a recipient who is registered, or entitled to be registered under the Indian Act using box 018, use <a href="#cd148">code 148</a>.
+<dd><strong>Do not</strong> report tax-exempt lump-sum payments you paid to a recipient who is registered, or entitled to be registered under the Indian Act using box 018. If part of the income was tax-exempt, report the part of the tax-exempt lump-sum payment using <a href="#cd148">code 148</a>.
 </dd>
 
 <dt>Direct transfers</dt>
-<dd><strong>Do not</strong> report direct transfers of <abbr title="Registered pension plan">RPP</abbr> or <abbr title="Deferred profit sharing plan">DPSP</abbr> lump-sum payments to <abbr title="Registered retirement savings plan">RRSP</abbr>s, <abbr title="Simplified pension plan">SPP</abbr>s, <abbr title="Pooled registered pension plan">PRPP</abbr>s, <abbr title="Registered retirement income fund">RRIF</abbr>s, or other <abbr title="Registered pension plan">RPP</abbr>s/<abbr title="Deferred profit sharing plan">DPSP</abbr> that are transferred according to subsections&nbsp;147.3(1) to (8) or subsection 147(19).
+<dd><p><strong>Do not</strong> report direct transfers of a <abbr title="Registered pension plan">RPP</abbr> or <abbr title="Deferred profit sharing plan">DPSP</abbr> lump-sum payments to a <abbr title="Registered retirement savings plan">RRSP</abbr>, <abbr title="Simplified pension plan">SPP</abbr>, <abbr title="Pooled registered pension plan">PRPP</abbr>, <abbr title="Registered retirement income fund">RRIF</abbr>, or other <abbr title="Registered pension plan">RPP</abbr>/<abbr title="Deferred profit sharing plan">DPSP</abbr> that are transferred according to subsections&nbsp;147.3(1) to (8) or subsection 147(19) using box 018, use <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2151.html">Form T2151 Direct Transfer of a Single Amount Under Subsection 147(19) or Section 147.3</a>.</p>
 </dd>
 </dl>
 
