--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -513,7 +513,7 @@
 
 <dt><abbr title="Advanced life deferred annuity">ALDA</abbr> </dt>
 <dd><p>Report <strong>only</strong> annuity payments from an advanced life deferred annuity (<abbr title="Advanced life deferred annuity">ALDA</abbr>) using box 024.</p>
-<p><strong>Do not</strong> report total <strong>annuity amounts transferred from a money purchase </strong> of <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Pool registered pension plan">PRPP</abbr> or <abbr title="Deferred profit sharing plan">DPSP</abbr> using box 024, use <a href="#cd037">code 037</a>. </p>
+<p><strong>Do not</strong> report total <strong>annuity amounts transferred from a money purchase </strong> <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Pool registered pension plan">PRPP</abbr> or <abbr title="Deferred profit sharing plan">DPSP</abbr> using box 024, use <a href="#cd037">code 037</a>. </p>
 </dd>
 
 <dt><abbr title="Income-averaging annuity contract">IAAC</abbr></dt>
@@ -623,16 +623,17 @@
 </details> 
 </li>
 <li class="code-num">
- <details> <summary>Code 030 – Patronage allocations <span class="label label-warning">Jeremiah</span></summary> 
-  <p id="cd030">Report patronage payments you made to customers for their patronage. </p>
-<p>Learn more on the tax treatement of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/patronage.html">Patronage payments</a></p>	 
+ <details> <summary>Code 030 – Patronage allocations <span class="label label-success">Rewrite done</span></summary> 
+  <p id="cd030">Report patronage payments you made to customers for their patronage, including payments made in cash or in kind, by certificate of indebtedness, issue of shares, set-off, assignment or in any other way. </p>
+<p>Learn more on the tax treatment of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/patronage.html">Patronage payments</a></p>	 
  
 </details> 
 </li>
 <li class="code-num">
- <details> <summary>Code 032 –&nbsp;Registered pension plan contributions (past service) <span class="label label-warning">Jeremiah</span></summary> 
+ <details> <summary>Code 032 –&nbsp;Registered pension plan contributions (past service) <span class="label label-success">Rewrite done</span></summary> 
   <p id="cd032">Report the contributions a former employee made to buy past service using code 032.</p> 
  <h4>Specific situations </h4>
+<p> The plan administrator usually fills out the T4A slip when an employer-employee relationship no longer exists. You must include any instalment interest paid for past service contributions. Instalment interest is the portion of contributions that represents the amount charged to buy past service over time. </p> 
 <dl class="dl-horizontal">
 
 <dt>1989 or earlier years while a contributor</dt>
@@ -644,7 +645,7 @@
 
  <p>The plan administrator usually&nbsp;fills out&nbsp;the T4A&nbsp;slip when an employer-employee relationship no longer exists. You must include any instalment interest paid for past service contributions. Instalment interest is the portion of contributions that represents the amount charged to buy past service over time.</p>
 
-<p>Learn more on the tax treatement of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>
+<p>Learn more on the tax treatment of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>
   
  </details> 
 </li>
