--- a/subway/uht/calculate.html
+++ b/subway/uht/calculate.html
@@ -795,13 +795,8 @@ margin-left: 38px;
             
 		   
       <p>If your ownership of a residential property <strong>does not qualify for an exemption</strong> from the Underused Housing Tax for a calendar year, you must calculate what you owe for the calendar year.</p>
-   <div class="row mrgn-bttm-lg">
-		  <div class="col-sm-6 col-md-5">
-		<p>The tax rate of the Underused Housing Tax is 1%. To calculate what you owe, multiply the value of the residential property by the 1% tax rate. Then multiply that result by your <strong>ownership percentage</strong> of the property.</p></div>
-		  <div class="col-sm-6 col-md-7">
-	<p>The tax rate of the Underused Housing Tax is 1%. To calculate what you owe, multiply the value of the residential property by the 1% tax rate. Then multiply that result by your <strong>ownership percentage</strong> of the property.</p></div>
-		 
-		 <details>
+   <p>The tax rate of the Underused Housing Tax is 1%. To calculate what you owe, multiply the value of the residential property by the 1% tax rate. Then multiply that result by your <strong>ownership percentage</strong> of the property.</p>
+			 <details>
 			 <summary>What is ownership percentage</summary>
 			 <p>If you are an affected owner of a residential property on December 31 of a calendar year, your ownership percentage of the residential property for the calendar year is determined as follows:</p>
 <ul>
@@ -811,6 +806,8 @@ margin-left: 38px;
 	<ul><li>100% divided by the number of owners, if no percentage is indicated in the land registration system</li></ul>
 </ul>
 		 </details>
+		 
+	
 		 
 		 <div class="col-sm-6 col-md-7">
 			  	  <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
@@ -825,6 +822,7 @@ margin-left: 38px;
 </ul>
 	    </div>
 	  </div>
+		 
 	  <details><summary>Calculation example</summary>
 	  <p>If the value of the residental property is $500,000 and you have a 50% ownership for the year 2023.</p>
 	
