--- a/subway/uht/index.html
+++ b/subway/uht/index.html
@@ -976,7 +976,7 @@ input[type='radio'] {
 				<li><a href="downloadcomplete.html">Download and complete your return</a><br>
                                 [Details]
                             </li>
-                            <li><a href="filereturn.html">Send the return</a><br>
+                            <li><a href="sendreturn.html">Send the return</a><br>
                                 [Details]
                             </li>
                             <li><a href="paytax.html">Pay the tax</a><br>
